--- a/BookReviewApp.Web/Views/Authors/Create.cshtml
+++ b/BookReviewApp.Web/Views/Authors/Create.cshtml
@@ -35,10 +35,10 @@
                         </div>
 
                         <div class="d-flex justify-content-between">
-                            <a asp-action="Index" class="btn btn-secondary">
+                            <a asp-action="Index" class="btn btn-secondary" aria-label="Back to author list">
                                 <i class="bi bi-arrow-left"></i> Back to List
                             </a>
-                            <button type="submit" class="btn btn-primary">
+                            <button type="submit" class="btn btn-primary" aria-label="Create author">
                                 <i class="bi bi-check-circle"></i> Create Author
                             </button>
                         </div>
