--- a/BookReviewApp.Web/Views/Books/Delete.cshtml
+++ b/BookReviewApp.Web/Views/Books/Delete.cshtml
@@ -22,11 +22,11 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="text-center mb-3">
-                                <img src="@(Model.CoverImageUrl ?? "/images/no-cover.png")" 
+                                <img src="@(Model.CoverImageUrl ?? "/images/placeholder.jpg")" 
                                      class="img-thumbnail" 
                                      style="max-width: 200px;"
                                      alt="Book Cover"
-                                     onerror="this.src='/images/no-cover.png'" />
+                                     onerror="this.src='/images/placeholder.jpg'" />
                             </div>
                         </div>
                         <div class="col-md-8">
