--- a/BookReviewApp.Web/Views/Books/Edit.cshtml
+++ b/BookReviewApp.Web/Views/Books/Edit.cshtml
@@ -83,11 +83,11 @@
                                 <div class="mb-3">
                                     <label class="form-label">Current Cover</label>
                                     <div class="text-center">
-                                        <img src="@(Model.CoverImageUrl ?? "/images/no-cover.png")" 
+                                        <img src="@(Model.CoverImageUrl ?? "/images/placeholder.jpg")" 
                                              class="img-thumbnail" 
                                              style="max-width: 200px;"
                                              alt="Book Cover"
-                                             onerror="this.src='/images/no-cover.png'" />
+                                             onerror="this.src='/images/placeholder.jpg'" />
                                     </div>
                                 </div>
                             </div>
