--- a/BookReviewApp.Web/Views/Home/Index.cshtml
+++ b/BookReviewApp.Web/Views/Home/Index.cshtml
@@ -98,7 +98,7 @@
                                  alt="@book.Title"
                                  onerror="this.src='/images/placeholder.jpg'" />
                             <div class="book-overlay">
-                                <a asp-controller="Books" asp-action="Details" asp-route-id="@book.BookId" 
+                                <a asp-controller="Books" asp-action="Details" asp-route-id="@book.Id" 
                                    class="btn btn-warning btn-sm">
                                     <i class="bi bi-eye"></i> View Details
                                 </a>
