--- a/BookReviewApp.Web/Views/Authors/Delete.cshtml
+++ b/BookReviewApp.Web/Views/Authors/Delete.cshtml
@@ -62,7 +62,7 @@
                     }
 
                     <form asp-action="Delete" method="post">
-                        <input type="hidden" asp-for="AuthorId" />
+                        <input type="hidden" asp-for="Id" />
                         <div class="d-flex justify-content-between">
                             <a asp-action="Index" class="btn btn-secondary">
                                 <i class="bi bi-arrow-left"></i> Back to List
