--- a/BookReviewApp.Web/Views/Authors/Edit.cshtml
+++ b/BookReviewApp.Web/Views/Authors/Edit.cshtml
@@ -16,7 +16,7 @@
                 <div class="card-body">
                     <form asp-action="Edit" method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <input type="hidden" asp-for="AuthorId" />
+                        <input type="hidden" asp-for="Id" />
                         
                         <div class="mb-3">
                             <label asp-for="Name" class="form-label">Name *</label>
